# QtGame_Builded-by-CMake

./: CMakeLists.txt  README.md  tree.txt
QtGame/: CMakeLists.txt  main.cpp
QtGame/Forms/: GameWindow.ui
QtGame/Headers/: Bot.h  Character.h  GameEngin.h  GameStartWindow.h  GameView.h  Grass.h  Headers.h  Item.h  Knife.h  KnifeProjectile.h  Quadtree.h
QtGame/Resources/: resources.qrc
QtGame/Sources/: Bot.cpp  Character.cpp  GameEngin.cpp  GameStartWindow.cpp  GameView.cpp  Grass.cpp  Item.cpp  Knife.cpp  KnifeProjectile.cpp  Quadtree.cpp
